[package]
name = "weather-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
image = "0.24.2"
surf = "2.3.2"
chrono = "0.4.38"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
moka = { version = "0.12.8", features = ["future"] }
rocket_cors = "0.6.0"
oxipng = { version = "9.1", features = ["parallel", "zopfli", "filetime"], default-features = false }

